[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/RottenCheese.gd" type="Script" id=1]
[ext_resource path="res://scenes/rot_cheese_mesh.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1.75325, 1.77032, 1.74543 )

[node name="RottenCheese" type="Area"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
script = ExtResource( 1 )
reload_time = 45

[node name="rot_cheese" parent="." instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_RottenCheese_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
